2012-03-29 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-41
	* Software version checker!
	- Alert the user about a new version of Confdb.

2012-03-28 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-40
	* Software version checker!
	- from now on the confdb version must be set in the file confdb.version
	  this file includes the contact email, confdb version and the URL to compare versions.
	- The project is prepared to deploy confdb.version file in the web container.
	- It shows a console message, it needs a panel alert the users.

2012-03-28 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-39
	* Set confdb version and contact info from confdb.version file.
	* Update build.xml to deploy confdb.version file in the web container. 
	
2012-03-28 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-38
	* Improvements in Jython parser.
	- Parse operators.
	- disable "Import from python" option in the MenuBar. (to deploy the app.)
	
2012-03-27 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-37
	* propagate path renaming to HLTPrescaler instance label

2012-03-27 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-36
	* add pattern-matching filter to smart renaming
	
2012-03-27 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-35
	* Improvements in Jython parser.
	* Temporary disable "Import from python" option in the MenuBar. (to deploy the app.)
	
2012-03-27 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-34
	* Improvements in Jython parser.
	* Problems report dialog after parsing a configuration.

2012-03-26 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-06-33
	* Enables the disk caching in the browser by default. (Ulf).

2012-03-24 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-06-32
	* allow smart renaming to be selectively applied to paths only,
	  sequences only, or modules only (or All!).